Add scrollview tip

--- a/src/iOSTips/iOSTips/Base.lproj/Main.storyboard
+++ b/src/iOSTips/iOSTips/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="UTQ-Cp-L4d">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -57,6 +57,104 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+        </scene>
+        <!--Scrollable View Controller-->
+        <scene sceneID="pgC-vO-Ooa">
+            <objects>
+                <viewController id="UTQ-Cp-L4d" customClass="ScrollableViewController" customModule="iOSTips" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="JrI-ss-Yzo" userLabel="base-view">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PKE-y9-YPa" userLabel="scroll-view">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fRs-kP-KT1" userLabel="container-view">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="679"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label 1" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eMA-xf-rx0">
+                                                <rect key="frame" x="16" y="100" width="382" height="37"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="31"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label 2" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Icl-m9-aWv">
+                                                <rect key="frame" x="16" y="237" width="382" height="37"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="31"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label 3" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ExQ-mx-Sox">
+                                                <rect key="frame" x="16" y="374" width="382" height="37"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="31"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xdr-pR-ctQ">
+                                                <rect key="frame" x="16" y="511" width="382" height="70"/>
+                                                <color key="backgroundColor" red="0.052487619219999997" green="0.36700764299999999" blue="0.83195543289999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="70" id="uL3-i6-E56"/>
+                                                </constraints>
+                                                <state key="normal" title="Button 1">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hiZ-tx-vpJ">
+                                                <rect key="frame" x="16" y="589" width="382" height="70"/>
+                                                <color key="backgroundColor" red="0.052487619219999997" green="0.36700764299999999" blue="0.83195543289999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="70" id="ykt-7x-MLu"/>
+                                                </constraints>
+                                                <state key="normal" title="Button 2">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="ExQ-mx-Sox" secondAttribute="trailing" constant="16" id="2Oa-Nv-vF7"/>
+                                            <constraint firstItem="Icl-m9-aWv" firstAttribute="leading" secondItem="fRs-kP-KT1" secondAttribute="leading" constant="16" id="3vi-R1-1E5"/>
+                                            <constraint firstItem="hiZ-tx-vpJ" firstAttribute="leading" secondItem="fRs-kP-KT1" secondAttribute="leading" constant="16" id="4Tv-XI-Hd2"/>
+                                            <constraint firstItem="eMA-xf-rx0" firstAttribute="leading" secondItem="fRs-kP-KT1" secondAttribute="leading" constant="16" id="DBY-Zp-6hG"/>
+                                            <constraint firstItem="Icl-m9-aWv" firstAttribute="top" secondItem="eMA-xf-rx0" secondAttribute="bottom" constant="100" id="GZO-GH-7dw"/>
+                                            <constraint firstAttribute="trailing" secondItem="Icl-m9-aWv" secondAttribute="trailing" constant="16" id="HH4-3o-8OQ"/>
+                                            <constraint firstItem="ExQ-mx-Sox" firstAttribute="top" secondItem="Icl-m9-aWv" secondAttribute="bottom" constant="100" id="I7m-1P-Cj5"/>
+                                            <constraint firstAttribute="trailing" secondItem="hiZ-tx-vpJ" secondAttribute="trailing" constant="16" id="NHA-sa-Mtr"/>
+                                            <constraint firstAttribute="trailing" secondItem="eMA-xf-rx0" secondAttribute="trailing" constant="16" id="T4B-y1-l14"/>
+                                            <constraint firstAttribute="trailing" secondItem="xdr-pR-ctQ" secondAttribute="trailing" constant="16" id="WWK-ZH-iH4"/>
+                                            <constraint firstItem="eMA-xf-rx0" firstAttribute="top" secondItem="fRs-kP-KT1" secondAttribute="top" constant="100" id="WzE-Pd-b9X"/>
+                                            <constraint firstAttribute="bottom" secondItem="hiZ-tx-vpJ" secondAttribute="bottom" constant="20" id="Xdq-Qa-R8T"/>
+                                            <constraint firstItem="xdr-pR-ctQ" firstAttribute="top" secondItem="ExQ-mx-Sox" secondAttribute="bottom" constant="100" id="bAy-ZX-5mz"/>
+                                            <constraint firstItem="xdr-pR-ctQ" firstAttribute="leading" secondItem="fRs-kP-KT1" secondAttribute="leading" constant="16" id="flf-y9-YcZ"/>
+                                            <constraint firstItem="ExQ-mx-Sox" firstAttribute="leading" secondItem="fRs-kP-KT1" secondAttribute="leading" constant="16" id="kSv-zv-9b4"/>
+                                            <constraint firstItem="hiZ-tx-vpJ" firstAttribute="top" secondItem="xdr-pR-ctQ" secondAttribute="bottom" constant="8" id="lOc-4k-wRr"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="fRs-kP-KT1" firstAttribute="height" secondItem="PKE-y9-YPa" secondAttribute="height" priority="250" id="0cS-qo-0gB"/>
+                                    <constraint firstAttribute="bottom" secondItem="fRs-kP-KT1" secondAttribute="bottom" id="8pa-ou-6Nj"/>
+                                    <constraint firstItem="fRs-kP-KT1" firstAttribute="top" secondItem="PKE-y9-YPa" secondAttribute="top" id="Qjl-ea-iYs"/>
+                                    <constraint firstItem="fRs-kP-KT1" firstAttribute="leading" secondItem="PKE-y9-YPa" secondAttribute="leading" id="e2y-Ic-FEp"/>
+                                    <constraint firstItem="fRs-kP-KT1" firstAttribute="width" secondItem="PKE-y9-YPa" secondAttribute="width" id="tcT-QO-2Kp"/>
+                                    <constraint firstAttribute="trailing" secondItem="fRs-kP-KT1" secondAttribute="trailing" id="zqS-EG-HwD"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="PKE-y9-YPa" firstAttribute="leading" secondItem="Pit-xe-EIc" secondAttribute="leading" id="Nwi-q6-cky"/>
+                            <constraint firstItem="PKE-y9-YPa" firstAttribute="top" secondItem="Pit-xe-EIc" secondAttribute="top" id="XND-vg-j7P"/>
+                            <constraint firstItem="Pit-xe-EIc" firstAttribute="trailing" secondItem="PKE-y9-YPa" secondAttribute="trailing" id="kCa-ax-Dh1"/>
+                            <constraint firstItem="Pit-xe-EIc" firstAttribute="bottom" secondItem="PKE-y9-YPa" secondAttribute="bottom" id="mqY-F4-W8N"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Pit-xe-EIc" userLabel="safe-area"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6rj-fK-EJv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1128" y="123"/>
         </scene>
     </scenes>
 </document>
